Updated run instructions for JDK 16